# dssd-2025

./: .dockerignore  .env.example  .gitignore  .project  Dockerfile  README.md  jsconfig.json  package-lock.json  package.json  pom.xml  pyproject.toml  readme.md
api/app/: __init__.py
api/app/routes/: projects.py
api/app/services/: bonita.py
app/: .project  globals.css  layout.js  page.js  pom.xml
app/api/login/: route.js
app/api/logout/: route.js
app/api/processes/: route.js
app/diagrams/: Consejo directivo-1.0.proc  ONG originante y red de ONGs-1.0.proc  ongs-1.0.proc
app/forbidden/: page.jsx
app/login/: page.jsx
app/organizations/: ACME.xml
app/projects/: page.jsx
app/projects/[projectId]/: page.jsx
app/projects/colaborate/: page.jsx
app/projects/new/: page.jsx
app/reports/: page.jsx
components/: NavBar.jsx
components/projects/: CollaborateProjectDetail.jsx  FieldError.jsx  FinishCollaborations.jsx  FormStyles.module.css  NewProjectForm.jsx  ProjectDetail.jsx  ProjectFields.jsx  ProjectList.jsx  ProjectsAvailableForCollaboration.jsx  RequestRow.jsx  RunningProjectsList.jsx  StageCard.jsx  Stages.jsx
components/reports/: DelayedObservationsList.jsx  ProjectStatusChart.jsx  RequestsChart.jsx
frontend/: next.config.mjs
lib/: auth.js  bonita.js  constants.js  examples.js  prisma.js  projectMapper.js  projectService.js  sessionStore.js  store.js
lib/validation/: collaborationRequestSchema.js  projectSchema.js
prisma/: schema.prisma
tercera-entrega/: main.py
tercera-entrega/core/: commands.py  config.py  database.py  seed.py
(+25 files in other folders)
